--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,6 +37,14 @@ layout: default
     <div class="col-md-4">
       <div class="card card-category">
         <h3>Category</h3>
+        {% for category in site.categories %}
+          <h3>{{ category[0] }}</h3>
+          <ul>
+            {% for post in category[1] %}
+              <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endfor %}
+          </ul>
+        {% endfor %}
       </div>
       <div class="card card-tags">
         <h3>Tags</h3>
