--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 */
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://kyechan99-1.disqus.com/embed.js';
+s.src = 'https://kyechan99-github-io.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
