--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header class="site-header">
 
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             {%- assign default_paths = site.pages | map: "path" -%}
             {%- assign page_paths = site.header_pages | default: default_paths -%}
             {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-            <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">
+            <!-- <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">
                 <img src="/assets/title.png" width="60%" height="60%" class="d-inline-block align-top" alt="">
-            </a>
+            </a> -->
             <!-- <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -15,6 +15,9 @@
             {%- if titles_size > 0 -%}
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+                        	<a class="nav-link" href="/">홈 <span class="sr-only">(current)</span></a>
+                        </li>
                         {%- for path in page_paths -%}
                             {%- assign my_page = site.pages | where: "path", path | first -%}
                             {%- if my_page.title -%}
