--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -5,14 +5,26 @@
 }
 
 .navbar {
-    background-color: white;
-    box-shadow: 0px 0px 3px $gray-black;
+	height: 180px;
+    // background-color: white;
+    // box-shadow: 0px 0px 3px $gray-black;
     font-weight: $notosans-bold;
     font-size: $p-size;
+    @include media("(max-width: 992px)") {
+		height: auto;
+		.navbar-collapse {
+			padding-left: 0px;
+			padding-right: 0px;
+		}
+    }
+	.navbar-collapse {
+		padding-left: 100px;
+		padding-right: 100px;
+	}
 }
 
 .page-content {
-    padding-top: $navbar-height + 40px;
+    // padding-top: $navbar-height + 40px;
     padding-bottom: $navbar-height + 40px;
 
     ul {
@@ -27,7 +39,7 @@
 .card-list {
     padding: 40px;
     .card-date {
-        color: $highlight;
+        color: $themeColor;
     }
     .card-title {
         font-size: 30px;
@@ -46,44 +58,115 @@
     }
 }
 
-.card-post {
-    padding: 100px;
-    @include media("(max-width: 992px)") {
-        padding: 20px 10px 20px 10px;
-    }
+.card {
+	border: none;
+	&.card-post {
+		margin-top: 50px;
+		@include media("(max-width: 992px)") {
+			margin-top: 10px;
+		}
+	}
+
+	&.card-comment {
+		margin-top: 100px;
+		@include media("(max-width: 992px)") {
+			margin-top: 5px;
+			padding: 20px 10px 20px 10px;
+		}
+	}
+
+	&.card-category {
+		padding: 0px 40px 0px 40px;
+	}
+
+	&.card-tags {
+		padding: 0px 40px 0px 40px;
+	}
 }
 
-.card-comment {
-    margin-top: 100px;
-    padding: 100px;
-    @include media("(max-width: 992px)") {
-        margin-top: 5px;
-        padding: 20px 10px 20px 10px;
-    }
-}
-
-.card-category {
-    padding: 0px 40px 0px 40px;
-}
-
-.card-tags {
-    padding: 0px 40px 0px 40px;
+.post-container-fluid {
+	padding-left: 250px;
+	padding-right: 250px;
+	.post-img {
+		width: 100%;
+		height: 270px;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		border-radius: 150px;
+		// background: #fffef5;
+		background-color: linear-gradient(145deg, #ffffff, #e1e1e1);
+box-shadow:  11px 11px 22px #919191, 
+             -11px -11px 22px #ffffff;
+		margin-bottom: 80px;
+	}
 }
 
 .post {
+	padding-left: 180px;
+	padding-right: 180px;
+	.quick-bar {
+		position: fixed;
+		margin-top: 100px;
+		margin-left: -50px;
+		z-index: 101;
+		&.hide {
+			opacity: 0%;
+		}
+		&.show {
+			opacity: 100%;
+		}
+		.quick-btn {
+			margin-bottom: 15px;
+			display: block;
+			width: 70px;
+			height: 70px;
+			border: 0px;
+			border-radius: 35px;
+			color: $themeColor;
+background: linear-gradient(145deg, #ffffff, #e6e6e6);
+box-shadow:  7px 7px 10px #e6e6e6, 
+             -7px -7px 10px #ffffff;
+		}
+	}
     .post-header {
-        padding-top: 50px;
+        // padding-top: 50px;
         // padding-bottom: 50px;
     }
-    .post-title {
-        font-size: 40px;
-        font-weight: $notosans-bold;
-        color: $black;
-    }
-    .post-subtitle {
-        padding-bottom: 30px;
-        font-weight: $notosans-medium;
-    }
+	.post-info {
+		@include media("(max-width: 992px)") {
+			padding: 20px 10px 20px 10px;
+		}
+		.post-category {
+			margin-bottom: 5px;
+			font-size: 15px;
+			font-weight: $notosans-medium;
+			color: $themeColor;
+		}
+		.post-title {
+			margin-bottom: 5px;
+			font-size: 40px;
+			font-weight: $notosans-bold;
+			color: $bold-black;
+		}
+		.post-subtitle {
+			font-size: 22px;
+			font-weight: $notosans-medium;
+			color: $gray-black;
+		}
+		.post-tags-box {
+			.post-tag {
+				margin-right: 5px;
+				padding: 3px 7px 3px 7px;
+				display: inline-block;
+				border-radius: 3px;
+				color: #FFFFFF;
+				background-color: $themeColor;
+				opacity: 0.8;
+				// cursor: pointer;
+			}
+		}
+	}
 }
 
 
