--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -87,24 +87,61 @@
 .post-container-fluid {
 	padding-left: 250px;
 	padding-right: 250px;
+	@include media("(max-width: 1600px)") {
+		padding-left: 200px;
+		padding-right: 200px;
+	}
+	@include media("(max-width: 1400px)") {
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+	@include media("(max-width: 1200px)") {
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	@include media("(max-width: 992px)") {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	@include media("(max-width: 768px)") {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
 	.post-img {
 		width: 100%;
 		height: 270px;
+		margin-bottom: 80px;
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		border-radius: 150px;
 		// background: #fffef5;
 		background-color: linear-gradient(145deg, #ffffff, #e1e1e1);
-box-shadow:  11px 11px 22px #919191, 
-             -11px -11px 22px #ffffff;
-		margin-bottom: 80px;
+		box-shadow:  11px 11px 22px #919191, 
+					 -11px -11px 22px #ffffff;
+		@include media("(max-width: 768px)") {
+			margin-bottom: 20px;
+			border-radius: 0px;
+			box-shadow: none;
+		}
 	}
 }
 
 .post {
 	padding-left: 180px;
 	padding-right: 180px;
+	@include media("(max-width: 1200px)") {
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+	@include media("(max-width: 992px)") {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	@include media("(max-width: 768px)") {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
 	.quick-bar {
 		position: fixed;
 		margin-top: 100px;
@@ -136,6 +173,10 @@ box-shadow:  7px 7px 10px #e6e6e6,
 	.post-info {
 		@include media("(max-width: 992px)") {
 			padding: 20px 10px 20px 10px;
+		}
+		@include media("(max-width: 768px)") {
+			padding-left: 0px;
+			padding-right: 0px;
 		}
 		.post-category {
 			margin-bottom: 5px;
