--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -19,7 +19,9 @@ $code-bg-color: #E5F7F0;
 // blockquote 색
 $blockquote-bg: #F8FDFB;
 $blockquote-strike: #B6F0D9;
-
+// navbar active 색
+$nav-item-active: #2f3631;
+$nav-item-active-content: #b9fae9;
 
 // 100 300 400 500 700 900
 $notosans-thin: 300;
