--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,38 +3,38 @@ layout: default
 ---
 
 <div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
-
-  {{ content }}
-
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
       {%- if site.posts.size > 0 -%}
-        <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
         <ul class="post-list">
           {%- for post in site.posts -%}
-          <li>
-            <div class="card card-list">
-              {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-              <span class="post-meta card-date">{{ post.date | date: date_format }}</span>
-              <a class="post-link card-title" href="{{ post.url | relative_url }}">
-                {{ post.title | escape }}
-              </a>
-              <span class="post-meta card-subtitle">{{ post.description }}</span>
-              {%- if site.show_excerpts -%}
-                {{ post.excerpt }}
-              {%- endif -%}
-            </div>
+		  <li class="post-part">
+			<div class="post-info post-card" onclick='document.location.href="{{ post.url | relative_url }}"'>
+				<p class="post-category p-name" itemprop="name headline">
+					{%- if post.categories[0] == 'Lib' or post.categories[0] == 'Dev' -%}
+						<a href="/DevNote">개발노트</a> / {{ post.categories[0] }}
+					{%- elsif post.categories[0] == 'Games' or post.categories[0] == 'Web' -%}
+						<a href="/DevNote">프로젝트</a> / {{ post.categories[0] }}
+					{%- else -%}
+						/ {{ post.categories[0] }}
+					{%- endif -%}
+				</p>
+				<p class="post-title p-name" itemprop="name headline">{{ post.title | escape }}</p>
+				<p class="post-subtitle p-name" itemprop="name headline">{{ post.description }}</p>
+				<p class="post-sample">{{ post.content | truncatewords: 30, '...' | strip_html | strip_newlines }}</p>
+				<div class="post-tags-box">
+					{%- for tag in post.tags -%}
+						<span class="post-tag">{{ tag }}</span>
+					{%- endfor -%}
+				</div>
+			</div>
           </li>
           {%- endfor -%}
         </ul>
-        <!-- <p class="feed-subscribe"><svg class="svg-icon orange"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p> -->
       {%- endif -%}
     </div>
 
-    <div class="col-md-4">
+    <!-- <div class="col-md-4">
       <div class="card card-category">
         <h3>Category</h3>
         {% for category in site.categories %}
@@ -51,13 +51,13 @@ layout: default
         {% for tags in site.tags %}
           <h3>{{ tags[0] }}</h3>
           <ul>
-            <!-- {% for post in category[1] %}
+            {% for post in category[1] %}
               <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %} -->
+            {% endfor %}
           </ul>
         {% endfor %}
       </div>
-    </div>
+    </div> -->
 
   </div>
 </div>
