--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,43 +1,23 @@
 <footer class="footer">
-    <data class="u-url" href="{{ "/" | relative_url }}"></data>
-  
-    <div class="container">
-      <p class="text-center">© 2018 <a href="/" style="font-weight: 700">kyechan99</a>  </p>
-      <div class="row">
-        <!-- <div class="col-md-3">
-          <h2 class="footer-heading">{{ site.title }}</h2>
-          <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
-        </div>
-        <div class="col-md-9">
-        </div> -->
-        <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2>
-    
-        <div class="footer-col-wrapper">
-          <div class="footer-col footer-col-1">
-            <ul class="contact-list">
-              <li class="p-name">
-                {%- if site.author -%}
-                  {{ site.author | escape }}
-                {%- else -%}
-                  {{ site.title | escape }}
-                {%- endif -%}
-                </li>
-                {%- if site.email -%}
-                <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                {%- endif -%}
-            </ul>
-          </div>
-    
-          <div class="footer-col footer-col-2">
-            {%- include social.html -%}
-          </div>
-    
-          <div class="footer-col footer-col-3">
-            <p>이 부분은 제가 추가로 입력한 부분입니다.</p>
-            <p>{{- site.description | escape -}}</p>
-          </div>
-        </div> -->
-      </div>
-    </div>
-  
-  </footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 my-info d-flex flex-column">
+				<p class="info-desc my-name">{{ site.name }}</p>
+				<p class="info-desc my-email"><span class="desc-icon">{% octicon mail height:14 %}</span>{{ site.email }}</p>
+				<p class="info-desc my-kakao"><span class="desc-icon">{% octicon comment height:16 %}</span>{{ site.kakao_id }}</p>
+				<!-- <p class="my-info">©kyechan99</p> -->
+			</div>
+			<div class="col-md-4 my-link d-flex justify-content-center">
+				<button class="btn icons" onclick='document.location.href="https://github.com/{{ site.github_username }}"'>
+					{% octicon mark-github height:32 %}
+				</button>
+			</div>
+			<div class="col-md-4 my-menu d-flex justify-content-end" style="align-items:center;">
+				<a class="quick-menu" href="/">홈</a>
+				<a class="quick-menu" href="/DevNot">개발노트</a>
+				<a class="quick-menu" href="/Project">프로젝트</a>
+				<a class="quick-menu" href="/about">소개</a>
+			</div>
+		</div>
+	</div>
+</footer>
