--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -309,17 +309,77 @@
 }
 
 .footer {
-  bottom: 0;
-  width: 100%;
-  border-color: #c2c2c2;
-  border-style: solid;
-  border-width: 1px 0px 0px 0px;
-  padding: 50px 0px 50px 0px;
-
-  .footer-block {
-    margin: 20px 0;
-  }
-  a {
-      color: $gray-black;
-  }
+	bottom: 0;
+	width: 100%;
+	border-color: #e7e8e6;
+	border-style: solid;
+	border-width: 1px 0px 0px 0px;
+	padding: 50px 0px 50px 0px;
+	background-color: #f5f7f2;
+	.my-info {
+		color: #a2a3a0;
+		@include media("(max-width: 576px)") {
+			margin-bottom: 0px !important;
+			justify-content: center !important;
+			align-items: center;
+		}
+		.info-desc {
+			color: #a2a3a0;
+			&.my-name {
+				font-size: 22px;
+				font-weight: 400;
+				margin-bottom: 5px;
+			}
+			&.my-email {
+				font-size: 14px;
+				margin-bottom: 0px;
+			}
+			&.my-kakao {
+				font-size: 14px;
+				margin-bottom: 0px;
+			}
+			.desc-icon {
+				opacity: 0.3;
+				margin-right: 10px;
+			}
+		}
+	}
+	.my-link {
+		@include media("(max-width: 576px)") {
+			margin-top: 20px !important;
+			margin-bottom: 20px !important;
+		}
+		@include media("(max-width: 768px)") {
+			margin-top: 45px;
+			margin-bottom: 45px;
+		}
+		.icons {
+			opacity: 0.3;
+		}
+	}
+	.my-menu {
+		@include media("(max-width: 576px)") {
+			justify-content: center !important;
+			margin-bottom: 0px !important;
+		}
+		.quick-menu {
+			margin-left: 10px;
+			color: #a2a3a0;
+			height: 30px;
+			@include media("(max-width: 576px)") {
+				margin-left: 5px;
+				margin-right: 5px;
+			}
+			&:hover {
+				text-decoration: none;
+			}
+		}
+	}
+	.my-info,
+	.my-link,
+	.my-menu {
+		@include media("(max-width: 576px)") {
+			margin-bottom: 30px;
+		}
+	}
 }
