--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -14,7 +14,7 @@ $striking: #59D6B5;
 // pre 배경 색
 $pre-bg-color: #E5F7F0;
 // code 색
-$code: #636363;
+$code: #5b635b;
 $code-bg-color: #E5F7F0;
 // blockquote 색
 $blockquote-bg: #F8FDFB;
