--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -38,6 +38,7 @@ code {
 	padding: 1px 5px 1px 5px;
     color: $code;
     font-size: $code-size;
+    font-family: 'SFMono-Light', sans-serif;
     font-weight: $notosans-thin;
 	background-color: $code-bg-color;
 	border-radius: 5px;
