--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="google-site-verification" content="9BqjgIf5nofNnkQs2N2PTcsd3xZDzCJeSvLMCeNuHaY" />
+	<!-- Google Auth -->
+	<meta name="google-site-verification" content="CPBHSXOcqx3RLJ-Pn1Vr34l30UqV46HXj7Et7LsCM7U" />
     {%- seo -%}
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
     <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}"> -->
